# cine-sync-v2

./: .env.example  .gitignore  DATASET_STRUCTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODELS.md  MODEL_IMPROVEMENTS_README.md  MODEL_REFACTOR_HANDOFF.md  README.md  README_TESTS.md  admin_interface.py  advanced_feature_engineering.py  api_integrations.py  config.py  data_import_pipeline.py  discord_notifications.py  distributed_training.py  enhanced_training.py  fast_dataloader.py  fix_wandb_steps.py  generate_missing_model_files.py  generate_ncf_sequential_files.py  inference.py  init-db.sql  inspect_model_results.py  install_rust_dataloader.py  main.py  model_memory_profiler.py  organize_datasets.py  process_tv_datasets.py  pyproject.toml  requirements.txt  retrain_with_feedback.py  run_enhanced_training.py  setup_datasets.py  setup_docker_postgres.bat  setup_postgres.bat  simple_config.py  start_cinesync.py  test_hybrid_tv_model.py  (+10 more)
advanced_models/: Dockerfile  README.md  bert4rec_recommender.py  enhanced_two_tower.py  graph_neural_network.py  graphsage_recommender.py  k8s-train.ps1  requirements.txt  sentence_bert_two_tower.py  t5_hybrid_recommender.py  train_advanced_models.py  transformer_recommender.py  variational_autoencoder.py
docs/: API_USAGE_EXAMPLES.md  COMPLETE_TECHNICAL_DOCUMENTATION.md  DISCORD_AI_AGENT_GUIDE.md  ENHANCEMENT_ROADMAP.md  FIXES_CHANGELOG_2026-01-14.md  MODEL_IMPROVEMENT_PLAN.md  MODEL_RECOMMENDATIONS.md  QUICK_START_AND_TROUBLESHOOTING.md  (+7 more)
src/data/rust_dataloader/: Cargo.toml
src/data/rust_dataloader/src/: lib.rs
(+324 files in other folders)
