[package]
name = "cine-sync-dataloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "cine_sync_dataloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rayon = "1.8"
anyhow = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rand = "0.8"
ndarray = "0.15"
numpy = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"